# code-challenges

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md
benches/: algorithms.rs
src/: lib.rs
src/arrays/: count_smaller_numbers_than_current.rs  find_difference_of_two_arrays.rs  four_sum.rs  get_total_efficiency.rs  has_pair_with_sum.rs  is_monotonic.rs  kth_largest.rs  last_stone_weight.rs  longest_subarray_with_abs_diff_limit.rs  longest_subset.rs  max_area.rs  merge_intervals.rs  min_difference.rs  mod.rs  next_permutation.rs  peak_finder.rs  product_of_array_except_itself.rs  remove_duplicates_from_sorted.rs  remove_element.rs  rotate_image.rs  set_mismatch.rs  sliding_window_maximum.rs  smallest_non_present_positive_number.rs  spiral_matrix.rs  spiral_order.rs  subarray_sum_equal_k.rs  three_sum.rs  three_sum_closest.rs  top_k_frequent.rs  top_k_frequent_words.rs  two_sum.rs  valid_mountain.rs
src/assessments/: amazon_assessments.rs  amazon_demo.rs  aws_interview_questions.rs  microsoft_codility_question.rs  mod.rs  move_units.rs
src/backtracking/: combination_sum.rs  generate_parentheses.rs  letter_combinations.rs  mod.rs  permutations2.rs  subsets.rs  sudoku_solver.rs  unique_paths_2.rs  word_search.rs
src/binary_trees/: avl_tree.rs  binary_tree_unique_paths_to_leaves.rs  delete_node_in_binary_search_tree.rs  good_nodes.rs  level_order_traversal.rs  lowest_common_ancestor.rs  mod.rs  nodes_equal_to_average_of_subtree.rs  valid_bst.rs
src/concurrency/: mod.rs  precedence_sync.rs
src/data_structures/: lru_cache.rs  max_heap.rs  min_stack.rs  mod.rs  (+2 more)
(+67 files in other folders)
